tests/compiler_errors/fn_redef_fn.tlp
fn foo do end
fn foo do end